Added dockerfiles and other production scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
+aiodns==3.5.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
 asgiref==3.9.1
-baseballquery==0.2.2
+attrs==25.3.0
+baseballquery==0.3.8
+Brotli==1.1.0
 certifi==2025.7.9
+cffi==1.17.1
 charset-normalizer==3.4.2
 Django==5.2.4
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
+frozenlist==1.7.0
+gevent==25.5.1
+greenlet==3.2.4
+gunicorn==23.0.0
 idna==3.10
 lmdb==1.7.2
 msgspec==0.19.0
+multidict==6.6.3
 numpy==2.3.1
+packaging==25.0
 pandas==2.3.1
+propcache==0.3.2
 pyarrow==20.0.0
+pycares==4.9.0
+pycparser==2.22
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.4
+setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==2.0.41
 sqlparse==0.5.3
@@ -20,3 +38,6 @@ tqdm==4.67.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
+yarl==1.20.1
+zope.event==5.1.1
+zope.interface==7.2
