--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
+    build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
