--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream baseballquery_api {
 server {
 
     listen 80;
-
+    listen [::]:80;
     location / {
         proxy_pass http://baseballquery_api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,5 +16,4 @@ server {
         fastcgi_send_timeout 240s;
         fastcgi_read_timeout 240s;
     }
-
 }
