--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
-FROM nginx:1.29
+FROM nginxproxy/nginx-proxy
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d
+# COPY nginx.conf /etc/nginx/conf.d
+COPY vhost.d/baseballapi.jasoner.net_location /etc/nginx/vhost.d/baseballapi.jasoner.net_location
