--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       - 8000
     env_file:
       - ./.env.prod
-  nginx:
+  nginx-proxy:
+    container_name: nginx-proxy
     build: ./nginx
     ports:
       - 80:80
