--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     entrypoint: /home/app/web/entrypoint.sh
@@ -38,6 +36,8 @@ services:
       - html:/usr/share/nginx/html
       - vhost:/etc/nginx/vhost.d
       - acme:/etc/acme.sh
+    volumes_from:
+      - nginx-proxy
     depends_on:
       - nginx-proxy
 
